--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,7 +12,7 @@ import "../styles/style.css"
 	</head>
 	<body>
 		<article class="card">
-			<img id="photo" src="../src/images/profile-photo.jpg" alt="Profile Photo">
+			<img id="photo" src="/src/images/profile-photo.jpg" alt="Profile Photo">
 			<h1>Jose Chable</h1>
 			<p>I was born in Oaxaca, Mexico. I grew up in a family of 3 siblings and at the age of 18 I decided to start my higher education outside my hometown. </p>
 
