--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 import "../styles/style.css"
+import profilephoto from "../images/profile-photo.jpg"
 ---
 <style lang="scss"></style>
 <html lang="en">
@@ -12,7 +13,7 @@ import "../styles/style.css"
 	</head>
 	<body>
 		<article class="card">
-			<img id="photo" src="/src/images/profile-photo.jpg" alt="Profile Photo">
+			<img id="photo" src={profilephoto.src}>
 			<h1>Jose Chable</h1>
 			<p>I was born in Oaxaca, Mexico. I grew up in a family of 3 siblings and at the age of 18 I decided to start my higher education outside my hometown. </p>
 
@@ -20,7 +21,7 @@ import "../styles/style.css"
 			<h2>Fun facts:</h2>
 			<ul>
 				<li><span class="label">The name of my pet is:</span> <span id="pet-name">Jack</span></li>
-				<li><span class="label">My favorite food is:</span> <span id="fav-food"><a href="#">Chilaquiles</a></span></li>
+				<li><span class="label">My favorite food is:</span> <span id="fav-food"><a href="food.astro">Chilaquiles</a></span></li>
 				<li><span class="label">I was born on:</span> <span id="birth-day">Monday</span></li>
 			</ul>
 		</article>
