--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,7 +21,7 @@ import profilephoto from "../images/profile-photo.jpg"
 			<h2>Fun facts:</h2>
 			<ul>
 				<li><span class="label">The name of my pet is:</span> <span id="pet-name">Jack</span></li>
-				<li><span class="label">My favorite food is:</span> <span id="fav-food"><a href="food.astro">Chilaquiles</a></span></li>
+				<li><span class="label">My favorite food is:</span> <span id="fav-food"><a href="food">Chilaquiles</a></span></li>
 				<li><span class="label">I was born on:</span> <span id="birth-day">Monday</span></li>
 			</ul>
 		</article>
