--- a/src/pages/food.astro
+++ b/src/pages/food.astro
@@ -13,6 +13,7 @@ import chilaquiles from "../images/chilaquiles.webp"
 	</head>
 	<body>
 		<article class="card">
+			<a href=index><p id="back" class="label">Back to home</p></a>
 			<img id="photo" src={chilaquiles.src}>
 			<h1>Red Chilaquiles</h1>
 			<div class="recipe">
