--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,7 @@ import profilephoto from "../images/profile-photo.jpg"
 	<body>
 		<article class="card">
 			<img id="photo" src={profilephoto.src}>
-			<h1>Jose Chable</h1>
+			<h1>José Chable</h1>
 			<p>I was born in Oaxaca, Mexico. I grew up in a family of 3 siblings and at the age of 18 I decided to start my higher education outside my hometown. </p>
 
 			<p>I have a bachelor’s degree in Multimedia & Communication Engineering from the University of Guadalajara in Jalisco, Mexico</p>
